--- a/shelter/components/help-icon/_help-icon.scss
+++ b/shelter/components/help-icon/_help-icon.scss
@@ -29,19 +29,3 @@
 .item:hover {
   transform: scale(1.1);
 }
-
-.item:nth-child(6) {
-  margin-left: 8.3%;
-
-  @include for-tablet {
-    margin: 0;
-  }
-}
-
-.item:last-child {
-  margin-right: 8.3%;
-
-  @include for-tablet {
-    margin: 0;
-  }
-}
